--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -4,7 +4,9 @@
     <p>Topics</p>
     <ul>
         {% for topic in topics %}
-            <li>{{ topic }}</li>
+            <li>
+                <a href="{% url 'topic' topic.id %}">{{ topic }}</a>
+            </li>
         {% empty %}
             <li>No topics have been added yet.</li>
         {% endfor %}
