--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,6 +1,11 @@
 <p>
   <a href="{% url 'index' %}">Learning Log</a> -
-  <a href="{% url 'topics' %}">Topics</a>
+  <a href="{% url 'topics' %}">Topics</a> -
+  {% if user.is_authenticated %}
+    Hello, {{ user.username }}.
+  {% else %}
+      <a href="{% url 'login' %}">log in</a>
+  {% endif %}
 </p>
 
 {% block content %}{% endblock content%}
