--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -5,11 +5,15 @@
     <p>Topic: {{ topic }}</p>
 
     <p>Entries:</p>
+    <p>
+        <a href="{% url 'new_entry' topic.id %}">add new entry</a>
+    </p>
     <ul>
     {% for entry in entries %}
         <li>
-            <p>{{ entry.data_added|date:'M d,Y H:i' }}</p>
+            <p>{{ entry.data_added|date:'M d,Y H:i:s' }}</p>
             <p>{{ entry.text|linebreaks }}</p>
+            <p><a href="{% url 'edit_entry' entry.id %}">edit entry</a></p>
         </li>
     {% empty %}
         <li>
