--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -11,4 +11,5 @@
             <li>No topics have been added yet.</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'new_topic' %}">Add a new topic:</a>
 {% endblock content %}
