--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -3,6 +3,7 @@
   <a href="{% url 'topics' %}">Topics</a> -
   {% if user.is_authenticated %}
     Hello, {{ user.username }}.
+      <a href="{% url 'logout·' %}">log out</a>
   {% else %}
       <a href="{% url 'login' %}">log in</a>
   {% endif %}
