--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,11 +1,19 @@
 {% extends 'learning_logs/base.html' %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h2>Register a new account.</h2>
+{% endblock header %}
 
 {% block content %}
-    <form method="post" action={% url 'register' %}>
+    <form method="post" action="{% url 'register' %}" class="form" >
         {% csrf_token %}
-        {{ form.as_p }}
+        {% bootstrap_form form %}
 
-        <button name="submit">register</button>
+        {% buttons %}
+           <button name="submit" class="btn btn-primary">register</button>
+        {% endbuttons %}
+
         <input type="hidden" name="next" value="{% url 'index' %}"/>
     </form>
 {% endblock content %}
