--- a/learning_logs/templates/learning_logs/new_entry.html
+++ b/learning_logs/templates/learning_logs/new_entry.html
@@ -1,11 +1,19 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h2>Add a new entry:</h2>
+{% endblock header %}
 
 {% block content %}
-    <p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
-    <p>Add a new entry:</p>
-    <form action="{% url 'new_entry' topic.id %}" method="post">
+    <h3>
+        <a href="{% url 'topic' topic.id %}">{{ topic }}</a>
+    </h3>
+    <form action="{% url 'new_entry' topic.id %}" method="post" class="form">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="submit">add entry</button>
+        {% bootstrap_form form  %}
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">add entry</button>
+        {% endbuttons %}
     </form>
 {% endblock content %}
